--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Demo Page</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="app"><div class="main">Main</div></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
