integrated to the dev server

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Demo Page</title>
   </head>
   <body>
-    <div id="app"><div class="main">Main</div></div>
+    <div id="app">
+      <header>
+        <p>This is the header</p>
+      </header>
+      <div class="main">
+        <h1>This is main</h1>
+      </div>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
