feat: ordering added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="main">
         <h1>This is main</h1>
       </div>
+      <di class="footer">Footer</di>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
