--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <div id="app">
+      <di class="footer">Footer</di>
       <header>
         <p>This is the header</p>
       </header>
       <div class="main">
         <h1>This is main</h1>
       </div>
-      <di class="footer">Footer</di>
     </div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/client.js"></script>
   </body>
 </html>
