fix: cache busting added

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <div id="app">
-      <di class="footer">Footer</di>
       <header>
-        <p>This is the header</p>
+        <p>This is the header. Breakk</p>
       </header>
       <div class="main">
         <h1>This is main</h1>
       </div>
+      <di class="footer">Footer</di>
     </div>
     <script type="module" src="/src/client.js"></script>
   </body>
