--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <title>Demo Page</title>
   </head>
   <body>
-    <div id="app">
-      <header>
-        <p>This is the header. Breakk</p>
-      </header>
-      <div class="main">
-        <h1>This is main</h1>
-      </div>
-      <di class="footer">Footer</di>
-    </div>
+    <div id="app"></div>
     <script type="module" src="/src/client.js"></script>
   </body>
 </html>
