--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Demo Page</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <p>MAIn</p>
+      <h1>Header</h1>
+    </div>
     <script type="module" src="/src/client.js"></script>
   </body>
 </html>
